--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -377,14 +377,14 @@
 @keyframes bounceInDown {
   0% {
     opacity: 0;
-    transform: translateY(calc(-2000px * var(--scale-factor)));
+    transform: translateY(calc(-50px * var(--scale-factor)));
   }
   60% {
     opacity: 1;
-    transform: translateY(calc(30px * var(--scale-factor)));
+    transform: translateY(calc(15px * var(--scale-factor)));
   }
   80% {
-    transform: translateY(calc(-10px * var(--scale-factor)));
+    transform: translateY(calc(-5px * var(--scale-factor)));
   }
   100% {
     transform: translateY(0);
@@ -394,14 +394,14 @@
 @keyframes bounceInUp {
   0% {
     opacity: 0;
-    transform: translateY(calc(2000px * var(--scale-factor)));
+    transform: translateY(calc(50px * var(--scale-factor)));
   }
   60% {
     opacity: 1;
-    transform: translateY(calc(-30px * var(--scale-factor)));
+    transform: translateY(calc(-15px * var(--scale-factor)));
   }
   80% {
-    transform: translateY(calc(10px * var(--scale-factor)));
+    transform: translateY(calc(5px * var(--scale-factor)));
   }
   100% {
     transform: translateY(0);
@@ -411,14 +411,14 @@
 @keyframes bounceInLeft {
   0% {
     opacity: 0;
-    transform: translateX(calc(-2000px * var(--scale-factor)));
+    transform: translateX(calc(-50px * var(--scale-factor)));
   }
   60% {
     opacity: 1;
-    transform: translateX(calc(30px * var(--scale-factor)));
+    transform: translateX(calc(15px * var(--scale-factor)));
   }
   80% {
-    transform: translateX(calc(-10px * var(--scale-factor)));
+    transform: translateX(calc(-5px * var(--scale-factor)));
   }
   100% {
     transform: translateX(0);
@@ -428,14 +428,14 @@
 @keyframes bounceInRight {
   0% {
     opacity: 0;
-    transform: translateX(calc(2000px * var(--scale-factor)));
+    transform: translateX(calc(50px * var(--scale-factor)));
   }
   60% {
     opacity: 1;
-    transform: translateX(calc(-30px * var(--scale-factor)));
+    transform: translateX(calc(-15px * var(--scale-factor)));
   }
   80% {
-    transform: translateX(calc(10px * var(--scale-factor)));
+    transform: translateX(calc(5px * var(--scale-factor)));
   }
   100% {
     transform: translateX(0);
@@ -445,7 +445,7 @@
 @keyframes bouncyDrop {
   0% {
     opacity: 0;
-    transform: translateY(calc(-100vh * var(--scale-factor)));
+    transform: translateY(calc(-50px * var(--scale-factor)));
   }
   12% {
     opacity: 1;
